--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ azure-storage-blob==12.19.0
 Flask==3.0.1
 Flask-Cors==4.0.0
 # jupyter==1.0.0
-# langchain==0.1.3
+langchain==0.1.3
 # langchain-community==0.0.16
 # langchain-openai==0.0.5
 mysql-connector==2.2.9
