--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
 azure-storage-blob==12.19.0
-# chromadb==0.4.22
+
 Flask==3.0.1
 Flask-Cors==4.0.0
-# jupyter==1.0.0
+
 langchain==0.1.3
-# langchain-community==0.0.16
-# langchain-openai==0.0.5
+
 mysql-connector==2.2.9
-# mysql-connector-python==2.2.9
-# nltk==3.8.1 - not in current pipeline
+
 pandas==2.2.0
 pinecone-client==3.0.2
 pyarrow==15.0.0
 PyPDF2==3.0.1
-pytest==7.4.4
-pyodbc==5.0.1
+
 python-dotenv==1.0.0
-# pypdf==4.0.0
+
 sentence-transformers==2.3.1
 tiktoken==0.5.2
 openai==1.11.0
+
+requests-oauthlib==1.3.1
