--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ pinecone-client==3.0.2
 pyarrow==15.0.0
 PyPDF2==3.0.1
 
+python-docx==1.1.0
+
 python-dotenv==1.0.0
 
 sentence-transformers==2.3.1
